Added Box Collider Component

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Mackerel-Demo/imgui.ini
+/Mackerel-Core/Mackerel-Core-LAPTOP-NF8ALRTJ.vcxproj
+/Mackerel-Core/Mackerel-Core.vcxproj-LAPTOP-NF8ALRTJ.filters
