--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -29,7 +29,6 @@
     <ClCompile Include="ext\easyloggingpp-9.97.0\easyloggingpp-9.97.0\src\easylogging++.cpp" />
     <ClCompile Include="ext\GLAD\src\glad.c" />
     <ClCompile Include="src\App.cpp" />
-    <ClCompile Include="src\AudioChannel.cpp" />
     <ClCompile Include="src\AudioEngine.cpp" />
     <ClCompile Include="src\BoxColliderComponent.cpp" />
     <ClCompile Include="src\CameraComponent.cpp" />
@@ -437,6 +436,7 @@
     <ClInclude Include="src\AppAttorney.h" />
     <ClInclude Include="src\Assets.h" />
     <ClInclude Include="src\AudioChannel.h" />
+    <ClInclude Include="src\AudioEmitter.h" />
     <ClInclude Include="src\AudioEngine.h" />
     <ClInclude Include="src\BoxColliderComponent.h" />
     <ClInclude Include="src\CameraComponent.h" />
@@ -576,6 +576,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <FileType>Document</FileType>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="res\Sounds\Voyager.mp3" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
