--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="src\App.cpp" />
     <ClCompile Include="src\AudioEmitter.cpp" />
     <ClCompile Include="src\AudioEngine.cpp" />
+    <ClCompile Include="src\AudioListener.cpp" />
     <ClCompile Include="src\BoxColliderComponent.cpp" />
     <ClCompile Include="src\CameraComponent.cpp" />
     <ClCompile Include="src\CollisionComponent.cpp" />
@@ -439,6 +440,7 @@
     <ClInclude Include="src\AudioChannel.h" />
     <ClInclude Include="src\AudioEmitter.h" />
     <ClInclude Include="src\AudioEngine.h" />
+    <ClInclude Include="src\AudioListener.h" />
     <ClInclude Include="src\BoxColliderComponent.h" />
     <ClInclude Include="src\CameraComponent.h" />
     <ClInclude Include="src\ColliderTypes.h" />
