--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClCompile Include="src\AudioEmitter.cpp">
       <Filter>Source Files\Systems\EntitySystem\Components</Filter>
     </ClCompile>
+    <ClCompile Include="src\CollisionCallbackManager.cpp">
+      <Filter>Source Files\Systems\Physics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_glfw.h">
@@ -1594,6 +1597,15 @@
     </ClInclude>
     <ClInclude Include="src\AudioEmitter.h">
       <Filter>Source Files\Systems\EntitySystem\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CollisionData.h">
+      <Filter>Source Files\Systems\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CollisionCallbackManager.h">
+      <Filter>Source Files\Systems\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CollisionCallbackReceipt.h">
+      <Filter>Source Files\Systems\Physics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
